--- a/widget-test.html
+++ b/widget-test.html
@@ -21,6 +21,11 @@
         <blockquote class="scores-widget" data-widget-id="c512bdef-b364-42ce-9d99-c5fe797c84b3" data-token="02F535CD3DD3DA7A5C7C766CBB32DBE3"></blockquote>
     </div>
     
+    <div>
+        <p>Go Devils!</p>
+        <blockquote class="scores-widget" data-widget-id="21664833-8da9-4951-a679-6518b25a32ba" data-token="F8AB1FD10632CB04050D31FEB1E0EA0C"></blockquote>
+    </div>
+    
 </body>
 
 <script src="https://widgets-staging.thescore.com/js/widgets/platform.js"></script>
